Fix overflow issue for sidebar

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -24,6 +24,7 @@ body {
     color: $color-body;
     background-color: $color-background;
     -webkit-text-size-adjust: 100%;
+    overflow-x: hidden;
 }
 
 
