--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,11 @@
+.page-wrapper {
+  overflow-x: hidden;
+  
+  &.push-open {
+    overflow-x: visible;
+  }
+}
+
 /**
  * Site header
  */
@@ -21,12 +29,13 @@
 }
 
 .site-nav {
+  position: relative;
   float: right;
   line-height: 56px;
 
   .page-link {
     color: $color-black;
-    height: 30px;
+    // height: 30px;
     display: inline-block;
     padding-left: 15px;
     line-height: $line-hight-navbar;
@@ -45,12 +54,6 @@
     }
   }
 
-    position: absolute;
-    top: 9px;
-    right: 30px;
-    padding-top: 17px;
-    background-color: $background-color;
-    // box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
 
     .menu-icon {
       display: block;
@@ -60,7 +63,16 @@
       line-height: 0;
       padding-top: 10px;
       text-align: center;
+      cursor: pointer;
 
+      &:hover {
+        > svg {
+          path {
+            fill: $color-border;
+          }
+        }
+      }
+      
       > svg {
         width: 18px;
         height: 15px;
@@ -188,6 +200,8 @@
  */
 .page-content {
   padding: $spacing-unit 0;
+  min-height: 400px;
+  min-height: 70vh;
 }
 
 .page-heading {
